Update and rename Cover page.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>MY PERSONAL WEBSITE</title></head>
 <body><center><img src="img 1.jpg"width="600"height"=600"/><br/>
-<a href="cover page.html">HOME     |</a>
+<a href="index.html">HOME     |</a>
 <a href="Personal Data.html">PERSONAL DATA     |</a>
 <a href="Educ.html">EDUCATIONAL BACKGROUND     |</a>
 <a href="hobbies.html">HOBBIES     |</a>
