--- a/Personal Data.html
+++ b/Personal Data.html
@@ -4,7 +4,7 @@
 <center><a href="index.html">HOME     |</a>
 <a href="Personal Data.html">PERSONAL DATA     |</a>
 <a href="Educ.html">EDUCATIONAL BACKGROUND     |</a>
-<a href="hobbies.html">HOBBIES     |</a>
+<a href="Hobbies.html">HOBBIES     |</a>
 <a href="Org.html">OTHERS     |</a></center><br/>
 <img src="me.jpg"width="225"height"=225"/></align=center>
 <p><h1><b>PERSONAL DATA:</b></h1></br>
