--- a/Hobbies.html
+++ b/Hobbies.html
@@ -4,7 +4,7 @@
 <center><a href="index.html">HOME     |</a>
 <a href="Personal Data.html">PERSONAL DATA     |</a>
 <a href="Educ.html">EDUCATIONAL BACKGROUND     |</a>
-<a href="hobbies.html">HOBBIES     |</a>
+<a href="Hobbies.html">HOBBIES     |</a>
 <a href="Org.html">OTHERS     |</a><br/></center>
 <p><h1><b>HOBBIES :</b></h1><br/>                                 
 <center><img src="img2.jpg"width="200"height"200"/><center>
