--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <a href="index.html">HOME     |</a>
 <a href="Personal Data.html">PERSONAL DATA     |</a>
 <a href="Educ.html">EDUCATIONAL BACKGROUND     |</a>
-<a href="hobbies.html">HOBBIES     |</a>
+<a href="Hobbies.html">HOBBIES     |</a>
 <a href="Org.html">OTHERS     |</a>
 <hr width=100% size=5 noshade align=center>
 <p><h1><b>MY PERSONAL WEBSITE:</b></h1></br>
